cp3-networkpolicy/egress/operators/bedrock-egress-allow-services-namespace.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: bedrock-egress-allow-services-namespace
  namespace: "opNamespace"
  labels:
    component: cpfs3
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: "opNamespace"
