cp3-networkpolicy/egress/operators/bedrock-egress-allow-to-apiserver.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress-allow-to-apiserver
  namespace: "opNamespace"
  labels:
    component: cpfs3
spec:
  egress:
  - ports:
    - port: 443
      protocol: TCP
    - port: 6443
      protocol: TCP
    to:
    - namespaceSelector: {}
      podSelector:
        matchLabels:
          apiserver: "true"
  podSelector: {}
  policyTypes:
  - Egress
